# py-and-id

./: LICENSE  README.md  requirements.txt  setup.cfg
src/py_and_id/: __init__.py  py_and_id.py  segments.py  settings.py  types.py
src/py_and_id/backends/: mpl.py  svg.py
src/py_and_id/dsp/: __init__.py
src/py_and_id/elements/: __init__.py  compound.py  legacy.py  outlets.py  pipes.py  rotary.py  twoterm.py
src/py_and_id/flow/: __init__.py
src/py_and_id/logic/: __init__.py
src/py_and_id/parsing/: logic_parser.py
tests/: pytest.ini
tests/notebooks/: headless.py  schematic.py  test_backend.ipynb  test_dsp.ipynb  test_elements.ipynb  test_elements2.ipynb  test_flow.ipynb  test_gallery.ipynb  test_gallery_kwargs.ipynb  test_intcircuits.ipynb  test_logic.ipynb  test_parselogic.ipynb  test_placement.ipynb  test_styles.ipynb  test_timing.ipynb
