[metadata]
name = py-and-id
version = 0.0.01
author = Abhishek V Raman
author_email = 
description = Piping and Instrumentation diagram but it's Python Code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhishekvraman/py-and-id
project_urls =
    Bug Tracker = https://github.com/abhishekvraman/py-and-id/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha      
    Intended Audience :: Manufacturing
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
install_requires =
    propylean
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src